--- a/Projekt/portfolio.html
+++ b/Projekt/portfolio.html
@@ -4,14 +4,15 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylessheet" href="/css/styles.css">
     <title>Portfolio</title>
 </head>
 <header>
-    <a href="Projekt/index.html">WebStudio</a>
+    <a href="index.html">WebStudio</a>
     <nav>
         <ul>
             <li><a href="#">Agencja</a></li>
-            <li><a href="#">Portfolio</a></li>
+            <li><a href="portfolio.html">Portfolio</a></li>
             <li><a href="#">Kontakt</a></li>
         </ul>
     </nav>
@@ -27,41 +28,65 @@
         <button type="button">Marketing</button>
     </section>
     <section>
-        <h2>Czym się zajmujemy</h2>
         <ul>
-            <li><img src="images/pisanie.jpg" alt="kodowanie" width="370" height="294"></li>
-            <li><img src="images/telefon.jpg" alt="aplikacje na telefon" width="370" height="294"></li>
-            <li><img src="images/tablet.jpg" alt="aplikacje na tablet" width="370" height="294"></li>
+            <li>
+                <img src="images/portfolio/imgTechnocrack.jpg" alt="strona internetowa" width="370" height="294">
+                <h2>Technocrack</h2>
+                <figure>Strona internetowa</figure>
+            </li>
+            <li>
+                <img src="images/portfolio/imgneworlean.jpg" alt="koszykowka" width="370" height="294">
+                <h2>Grafika New Orlean vs Golden Star</h2>
+                <figure>Dizajn</figure>
+            </li>
+            <li>
+                <img src="images/portfolio/imgseafood.jpg" alt="Restauracja Seafood" width="370" height="294">
+                <h2>Restauracja Seafood</h2>
+                <figure>Aplikacja</figure>
+            </li>
         </ul>
     </section>
     <section>
-        <h2>Nasz zespół</h2>
         <ul>
             <li>
-                <img src="images/johndoe.jpg" alt="product designer" width="270" height="260">
-                <h2>John Doe</h2>
-                <figure>Product Designer</figure>
-            </li>
-            <li>
-                <img src="images/johndoekobieta.jpg" alt="frontend developer" width="270" height="260">
-                <h2>John Doe</h2>
-                <figure>Frontend Developer</figure>
-            </li>
-            <li>
-                <img src="images/johndoev2.jpg" alt="marketing" width="270" height="260">
-                <h2>John Doe</h2>
+                <img src="images/portfolio/imgprojektprime.jpg" alt="Sluchawki" width="370" height="294">
+                <h2>Projekt Prime</h2>
                 <figure>Marketing</figure>
             </li>
             <li>
-                <img src="images/johndoev3.jpg" alt="ui designer" width="270" height="260">
-                <h2>John Doe</h2>
-                <figure>UI Designer</figure>
+                <img src="images/portfolio/imgprojektboxes.jpg" alt="pudelka" width="370" height="294">
+                <h2>Projekt Boxes</h2>
+                <figure>Aplikacja</figure>
+            </li>
+            <li>
+                <img src="images/portfolio/imginspiration.jpg" alt="monitor mac" width="370" height="294">
+                <h2>Inspiration has no Borders</h2>
+                <figure>Strona internetowa</figure>
+            </li>
+        </ul>
+    </section>
+    <section>
+        <ul>
+            <li>
+                <img src="images/portfolio/imgmagazynlimited.jpg" alt="Magazyn" width="370" height="294">
+                <h2>Magazyn Limited Edition</h2>
+                <figure>Dizajn</figure>
+            </li>
+            <li>
+                <img src="images/portfolio/imgprojektlab.jpg" alt="Projekt LAB" width="370" height="294">
+                <h2>Projekt LAB</h2>
+                <figure>Marketing</figure>
+            </li>
+            <li>
+                <img src="images/portfolio/imggrowingbisness.jpg" alt="Laptop - Growing Buisness" width="370" height="294">
+                <h2>Growing Business</h2>
+                <figure>Aplikacja</figure>
             </li>
         </ul>
     </section>
 </main>
 <footer>
-    <a href="#">WebStudio</a>
+    <a href="index.html">WebStudio</a>
     <address>
         <ul>
             <li>
@@ -78,5 +103,4 @@
     </address>
 </footer>
 </body>
-
 </html>
