--- a/Projekt/index.html
+++ b/Projekt/index.html
@@ -3,24 +3,35 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylessheet" href="Projekt/css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet">
     <title>Page</title>
 </head>
-<header>
-    <a href="#">WebStudio</a>
-    <nav>
-        <ul>
-            <li><a href="#">Agencja</a></li>
-            <li><a href="#">Portfolio</a></li>
-            <li><a href="#">Kontakt</a></li>
+<header class="header">
+    <nav class="navigation"></nav>
+    <a class="navigation-logo" href="index.html"alt="logotyp strony" >
+        <img
+        src="/Projekt/images/logo.jpg"
+        alt="WebStudio"
+        width="145"
+        height="31"/>
+    </a>
+        <ul class="navigation-list">
+            <li class="navigation-list-item"><a href="#">Agencja</a></li>
+            <li class="navigation-list-item"><a href="portfolio.html">Portfolio</a></li>
+            <li class="navigation-list-item"><a href="#">Kontakt</a></li>
         </ul>
     </nav>
-    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-    <a href="tel:+48111111111">+48 111 111 111</a>
+    <a class="address" href="mailto:info@devstudio.com">info@devstudio.com</a>
+    <a class="address-phone-number" href="tel:+48111111111">+48 111 111 111</a>
 </header>
 <main>
     <section>
          <h1> EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-        <button type="button">Zamów usługę</button>
+        <button class="modal-btn" type="button">Zamów usługę</button>
     </section>
 <section>
     <ul>
@@ -76,7 +87,7 @@
     </section>
     </main>
     <footer>
-        <a href="#">WebStudio</a>
+        <a href="index.html">WebStudio</a>
         <address>
             <ul>
                 <li>
