--- a/Projekt/index.html
+++ b/Projekt/index.html
@@ -3,13 +3,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylessheet" href="Projekt/css/styles.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="stylesheet" href="/Projekt/css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
-        rel="stylesheet">
+        rel="stylesheet" />
     <title>Page</title>
 </head>
+<body>
 <header class="header">
     <nav class="navigation"></nav>
     <a class="navigation-logo" href="index.html"alt="logotyp strony" >
@@ -20,40 +21,40 @@
         height="31"/>
     </a>
         <ul class="navigation-list">
-            <li class="navigation-list-item"><a href="#">Agencja</a></li>
-            <li class="navigation-list-item"><a href="portfolio.html">Portfolio</a></li>
-            <li class="navigation-list-item"><a href="#">Kontakt</a></li>
+            <li class="navigation-list-link"><a href="#">Agencja</a></li>
+            <li class="navigation-list-link"><a href="portfolio.html">Portfolio</a></li>
+            <li class="navigation-list-link"><a href="#">Kontakt</a></li>
         </ul>
     </nav>
     <a class="address" href="mailto:info@devstudio.com">info@devstudio.com</a>
     <a class="address-phone-number" href="tel:+48111111111">+48 111 111 111</a>
 </header>
-<main>
+<main class="main">
     <section>
-         <h1> EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
-        <button class="modal-btn" type="button">Zamów usługę</button>
+         <h1 class="main-texth1"> EFEKTYWNE ROZWIĄZANIA DLA WASZEGO BIZNESU</h1>
+        <button class="modal-btn" type="button" >Zamów usługę</button>
     </section>
 <section>
-    <ul>
+    <ul class="main-list">
         <li>
-            <h2>LOREM IPSUM</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p>
+            <h3 class="main-list-texth3">LOREM IPSUM</h2>
+            <p class="main-list-tekst">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p>
         </li>
         <li>
-            <h2>LOREM IPSUM</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada </p>
+            <h3 class="main-list-texth3">LOREM IPSUM</h2>
+            <p class="main-list-tekst">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada </p>
         </li>
         <li>
-            <h2>LOREM IPSUM</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p>
+            <h3 class="main-list-texth3">LOREM IPSUM</h2>
+            <p class="main-list-tekst">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p>
         </li>
         <li>
-            <h2>LOREM IPSUM</h2>
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et
+            <h3 class="main-list-texth3">LOREM IPSUM</h2>
+            <p class="main-list-tekst">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et
                 malesuada</p>
         </li>
     </ul>
-    <h2>Czym się zajmujemy</h2>
+    <h2 class="main-texth2">Czym się zajmujemy</h2>
     <ul>
         <li><img src="images/pisanie.jpg" alt="kodowanie" width="370" height="294" ></li>
         <li><img src="images/telefon.jpg" alt="aplikacje na telefon" width="370" height="294"></li>
@@ -61,7 +62,7 @@
     </ul>
     </section>
     <section>
-        <h2>Nasz zespół</h2>
+        <h2 class="main-texth2">Nasz zespół</h2>
         <ul>
             <li>
                 <img src="images/johndoe.jpg" alt="product designer" width="270" height="260">
@@ -86,8 +87,10 @@
         </ul>
     </section>
     </main>
-    <footer>
-        <a href="index.html">WebStudio</a>
+    <footer class="footer">
+        <a class="navigation-logo" href="index.html" alt="logotyp strony">
+            <img src="/Projekt/images/logo.jpg" alt="WebStudio" width="145" height="31" />
+        </a>
         <address>
             <ul>
                 <li>
