--- a/Projekt/portfolio.html
+++ b/Projekt/portfolio.html
@@ -4,21 +4,30 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylessheet" href="/css/styles.css">
-    <title>Portfolio</title>
+    <link rel="stylesheet" href="/Projekt/css/styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
+        rel="stylesheet" />
+    <title>Page</title>
 </head>
-<header>
-    <a href="index.html">WebStudio</a>
-    <nav>
-        <ul>
-            <li><a href="#">Agencja</a></li>
-            <li><a href="portfolio.html">Portfolio</a></li>
-            <li><a href="#">Kontakt</a></li>
+
+<body>
+    <header class="header">
+        <nav class="navigation"></nav>
+        <a class="navigation-logo" href="index.html" alt="logotyp strony">
+            <img src="/Projekt/images/logo.jpg" alt="WebStudio" width="145" height="31" />
+        </a>
+        <ul class="navigation-list">
+            <li class="navigation-list-link"><a href="#">Agencja</a></li>
+            <li class="navigation-list-link"><a href="portfolio.html">Portfolio</a></li>
+            <li class="navigation-list-link"><a href="#">Kontakt</a></li>
         </ul>
-    </nav>
-    <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-    <a href="tel:+48111111111">+48 111 111 111</a>
-</header>
+        </nav>
+        <a class="address" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="address-phone-number" href="tel:+48111111111">+48 111 111 111</a>
+    </header>
 <main>
     <section>
         <button type="button">Wszystkie</button>
@@ -85,8 +94,10 @@
         </ul>
     </section>
 </main>
-<footer>
-    <a href="index.html">WebStudio</a>
+<footer class="footer">
+    <a class="navigation-logo" href="index.html" alt="logotyp strony">
+        <img src="/Projekt/images/logo.jpg" alt="WebStudio" width="145" height="31" />
+    </a>
     <address>
         <ul>
             <li>
