Wersja finalna zajecia 2

--- a/Projekt/index.html
+++ b/Projekt/index.html
@@ -26,7 +26,7 @@
             <li class="navigation-list-link"><a href="#">Kontakt</a></li>
         </ul>
     </nav>
-    <a class="address" href="mailto:info@devstudio.com">info@devstudio.com</a>
+    <a class="address-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
     <a class="address-phone-number" href="tel:+48111111111">+48 111 111 111</a>
 </header>
 <main class="main">
@@ -38,51 +38,51 @@
     <ul class="main-list">
         <li>
             <h3 class="main-list-texth3">LOREM IPSUM</h2>
-            <p class="main-list-tekst">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p>
+            <p class="main-list-undertitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p>
         </li>
         <li>
             <h3 class="main-list-texth3">LOREM IPSUM</h2>
-            <p class="main-list-tekst">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada </p>
+            <p class="main-list-undertitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada </p>
         </li>
         <li>
             <h3 class="main-list-texth3">LOREM IPSUM</h2>
-            <p class="main-list-tekst">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p>
+            <p class="main-list-undertitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p>
         </li>
         <li>
             <h3 class="main-list-texth3">LOREM IPSUM</h2>
-            <p class="main-list-tekst">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et
+            <p class="main-list-undertitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et
                 malesuada</p>
         </li>
     </ul>
     <h2 class="main-texth2">Czym się zajmujemy</h2>
-    <ul>
-        <li><img src="images/pisanie.jpg" alt="kodowanie" width="370" height="294" ></li>
-        <li><img src="images/telefon.jpg" alt="aplikacje na telefon" width="370" height="294"></li>
-        <li><img src="images/tablet.jpg" alt="aplikacje na tablet" width="370" height="294"></li>
+    <ul class="main-list">
+        <li class="main-list-piciture"><img src="images/pisanie.jpg" alt="kodowanie" width="370" height="294" ></li>
+        <li class="main-list-piciture"><img src="images/telefon.jpg" alt="aplikacje na telefon" width="370" height="294"></li>
+        <li class="main-list-piciture"><img src="images/tablet.jpg" alt="aplikacje na tablet" width="370" height="294"></li>
     </ul>
     </section>
     <section>
         <h2 class="main-texth2">Nasz zespół</h2>
-        <ul>
-            <li>
+        <ul class="main-list-team">
+            <li class="main-list-team-piciture">
                 <img src="images/johndoe.jpg" alt="product designer" width="270" height="260">
-                <h2>John Doe</h2>
-                <figure>Product Designer</figure>
+                <h3 class="main-list-team-text">John Doe</h2>
+                <figure class="main-list-team-under">Product Designer</figure>
             </li>
-            <li>
+            <li class="main-list-team-piciture">
                 <img src="images/johndoekobieta.jpg" alt="frontend developer" width="270" height="260">
-                <h2>John Doe</h2>
-                <figure>Frontend Developer</figure>
+                <h3 class="main-list-team-text">John Doe</h2>
+                <figure class="main-list-team-under">Frontend Developer</figure>
             </li>
-            <li>
+            <li class="main-list-team-piciture">
                 <img src="images/johndoev2.jpg" alt="marketing" width="270" height="260">
-                <h2>John Doe</h2>
-                <figure>Marketing</figure>
+                <h3 class="main-list-team-text">John Doe</h2>
+                <figure class="main-list-team-under">Marketing</figure>
             </li>
-            <li>
+            <li class="main-list-piciture">
                 <img src="images/johndoev3.jpg" alt="ui designer" width="270" height="260">
-                <h2>John Doe</h2>
-                <figure>UI Designer</figure>
+                <h3 class="main-list-team-text">John Doe</h2>
+                <figure class="main-list-team-under">UI Designer</figure>
             </li>
         </ul>
     </section>
@@ -93,14 +93,14 @@
         </a>
         <address>
             <ul>
-                <li>
+                <li class="address-map-foot">
                     <a href="https://goo.gl/maps/G4rR7pXP5CTATN6b7" target="blank">
                         m. Warszawa,Aleje Jerozolimskie 21</a>
                 </li>
-                <li>
+                <li class="adress-foot">
                     <a href="mailto:info@example.com">info@example.com</a>
                 </li>
-                <li>
+                <li class="adress-phone-number-foot">
                     <a href="tel+48111111111">+48 111 111 111</a>
                 </li>
             </ul>
