--- a/Projekt/portfolio.html
+++ b/Projekt/portfolio.html
@@ -29,67 +29,67 @@
         <a class="address-phone-number" href="tel:+48111111111">+48 111 111 111</a>
     </header>
 <main>
-    <section>
-        <button type="button">Wszystkie</button>
-        <button type="button">Strony</button>
-        <button type="button">Aplikacje</button>
-        <button type="button">Dizajn</button>
-        <button type="button">Marketing</button>
+    <section class="search">
+        <button class="search-btn" type="button">Wszystkie</button>
+        <button class="search-btn" type="button">Strony</button>
+        <button class="search-btn" type="button">Aplikacje</button>
+        <button class="search-btn" type="button">Dizajn</button>
+        <button class="search-btn" type="button">Marketing</button>
     </section>
     <section>
-        <ul>
-            <li>
+        <ul class="portfolio-main-list">
+            <li class="portfolio-main-list-piciture">
                 <img src="images/portfolio/imgTechnocrack.jpg" alt="strona internetowa" width="370" height="294">
-                <h2>Technocrack</h2>
-                <figure>Strona internetowa</figure>
+                <h2 class="portfolio-main-list-text">Technocrack</h2>
+                <figure class="portfolio-main-list-description">Strona internetowa</figure>
             </li>
-            <li>
+            <li class="portfolio-main-list-piciture">
                 <img src="images/portfolio/imgneworlean.jpg" alt="koszykowka" width="370" height="294">
-                <h2>Grafika New Orlean vs Golden Star</h2>
-                <figure>Dizajn</figure>
+                <h2 class="portfolio-main-list-text">Grafika New Orlean vs Golden Star</h2>
+                <figure class="portfolio-main-list-description">Dizajn</figure>
             </li>
-            <li>
+            <li class="portfolio-main-list-piciture">
                 <img src="images/portfolio/imgseafood.jpg" alt="Restauracja Seafood" width="370" height="294">
-                <h2>Restauracja Seafood</h2>
-                <figure>Aplikacja</figure>
+                <h2 class="portfolio-main-list-text">Restauracja Seafood</h2>
+                <figure class="portfolio-main-list-description">Aplikacja</figure>
             </li>
         </ul>
     </section>
     <section>
         <ul>
-            <li>
+            <li class="portfolio-main-list-piciture">
                 <img src="images/portfolio/imgprojektprime.jpg" alt="Sluchawki" width="370" height="294">
-                <h2>Projekt Prime</h2>
-                <figure>Marketing</figure>
+                <h2 class="portfolio-main-list-text">Projekt Prime</h2>
+                <figure class="portfolio-main-list-description">Marketing</figure>
             </li>
-            <li>
+            <li class="portfolio-main-list-piciture">
                 <img src="images/portfolio/imgprojektboxes.jpg" alt="pudelka" width="370" height="294">
-                <h2>Projekt Boxes</h2>
-                <figure>Aplikacja</figure>
+                <h2 class="portfolio-main-list-text">Projekt Boxes</h2>
+                <figure class="portfolio-main-list-description">Aplikacja</figure>
             </li>
-            <li>
+            <li class="portfolio-main-list-piciture">
                 <img src="images/portfolio/imginspiration.jpg" alt="monitor mac" width="370" height="294">
-                <h2>Inspiration has no Borders</h2>
-                <figure>Strona internetowa</figure>
+                <h2 class="portfolio-main-list-text">Inspiration has no Borders</h2>
+                <figure class="portfolio-main-list-description">Strona internetowa</figure>
             </li>
         </ul>
     </section>
     <section>
         <ul>
-            <li>
+            <li class="portfolio-main-list-piciture">
                 <img src="images/portfolio/imgmagazynlimited.jpg" alt="Magazyn" width="370" height="294">
-                <h2>Magazyn Limited Edition</h2>
-                <figure>Dizajn</figure>
+                <h2 class="portfolio-main-list-text">Magazyn Limited Edition</h2>
+                <figure class="portfolio-main-list-description">Dizajn</figure>
             </li>
-            <li>
+            <li class="portfolio-main-list-piciture">
                 <img src="images/portfolio/imgprojektlab.jpg" alt="Projekt LAB" width="370" height="294">
-                <h2>Projekt LAB</h2>
-                <figure>Marketing</figure>
+                <h2 class="portfolio-main-list-text">Projekt LAB</h2>
+                <figure class="portfolio-main-list-description">Marketing</figure>
             </li>
-            <li>
+            <li class="portfolio-main-list-piciture">
                 <img src="images/portfolio/imggrowingbisness.jpg" alt="Laptop - Growing Buisness" width="370" height="294">
-                <h2>Growing Business</h2>
-                <figure>Aplikacja</figure>
+                <h2 class="portfolio-main-list-text">Growing Business</h2>
+                <figure class="portfolio-main-list-description">Aplikacja</figure>
             </li>
         </ul>
     </section>
@@ -100,14 +100,14 @@
     </a>
     <address>
         <ul>
-            <li>
+            <li class="address-map-foot">
                 <a href="https://goo.gl/maps/G4rR7pXP5CTATN6b7" target="blank">
                     m. Warszawa,Aleje Jerozolimskie 21</a>
             </li>
-            <li>
+            <li class="adress-foot">
                 <a href="mailto:info@example.com">info@example.com</a>
             </li>
-            <li>
+            <li class="adress-phone-number-foot">
                 <a href="tel+48111111111">+48 111 111 111</a>
             </li>
         </ul>
