--- a/Projekt/index.html
+++ b/Projekt/index.html
@@ -10,10 +10,11 @@
         rel="stylesheet" />
     <title>Page</title>
 </head>
+
 <body>
 <header class="header">
-    <nav class="navigation"></nav>
-    <a class="navigation-logo" href="index.html"alt="logotyp strony" >
+    <nav class="navigation">
+    <a class="navigation-logo" href="index.html">
         <img
         src="/Projekt/images/logo.jpg"
         alt="WebStudio"
@@ -37,19 +38,19 @@
 <section>
     <ul class="main-list">
         <li>
-            <h3 class="main-list-texth3">LOREM IPSUM</h2>
+            <h3 class="main-list-texth3">LOREM IPSUM</h3>
             <p class="main-list-undertitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p>
         </li>
         <li>
-            <h3 class="main-list-texth3">LOREM IPSUM</h2>
+            <h3 class="main-list-texth3">LOREM IPSUM</h3>
             <p class="main-list-undertitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada </p>
         </li>
         <li>
-            <h3 class="main-list-texth3">LOREM IPSUM</h2>
+            <h3 class="main-list-texth3">LOREM IPSUM</h3>
             <p class="main-list-undertitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et malesuada</p>
         </li>
         <li>
-            <h3 class="main-list-texth3">LOREM IPSUM</h2>
+            <h3 class="main-list-texth3">LOREM IPSUM</h3>
             <p class="main-list-undertitle">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam vel arcu sem. Sed non sodales dui. Interdum et
                 malesuada</p>
         </li>
@@ -66,29 +67,29 @@
         <ul class="main-list-team">
             <li class="main-list-team-piciture">
                 <img src="images/johndoe.jpg" alt="product designer" width="270" height="260">
-                <h3 class="main-list-team-text">John Doe</h2>
+                <h3 class="main-list-team-text">John Doe</h3>
                 <figure class="main-list-team-under">Product Designer</figure>
             </li>
             <li class="main-list-team-piciture">
                 <img src="images/johndoekobieta.jpg" alt="frontend developer" width="270" height="260">
-                <h3 class="main-list-team-text">John Doe</h2>
+                <h3 class="main-list-team-text">John Doe</h3>
                 <figure class="main-list-team-under">Frontend Developer</figure>
             </li>
             <li class="main-list-team-piciture">
                 <img src="images/johndoev2.jpg" alt="marketing" width="270" height="260">
-                <h3 class="main-list-team-text">John Doe</h2>
+                <h3 class="main-list-team-text">John Doe</h3>
                 <figure class="main-list-team-under">Marketing</figure>
             </li>
             <li class="main-list-piciture">
                 <img src="images/johndoev3.jpg" alt="ui designer" width="270" height="260">
-                <h3 class="main-list-team-text">John Doe</h2>
+                <h3 class="main-list-team-text">John Doe</h3>
                 <figure class="main-list-team-under">UI Designer</figure>
             </li>
         </ul>
     </section>
     </main>
     <footer class="footer">
-        <a class="navigation-logo" href="index.html" alt="logotyp strony">
+        <a class="navigation-logo" href="index.html">
             <img src="/Projekt/images/logo.jpg" alt="WebStudio" width="145" height="31" />
         </a>
         <address>
