--- a/Projekt/portfolio.html
+++ b/Projekt/portfolio.html
@@ -15,8 +15,8 @@
 
 <body>
     <header class="header">
-        <nav class="navigation"></nav>
-        <a class="navigation-logo" href="index.html" alt="logotyp strony">
+        <nav class="navigation">
+        <a class="navigation-logo" href="index.html">
             <img src="/Projekt/images/logo.jpg" alt="WebStudio" width="145" height="31" />
         </a>
         <ul class="navigation-list">
@@ -29,13 +29,13 @@
         <a class="address-phone-number" href="tel:+48111111111">+48 111 111 111</a>
     </header>
 <main>
-    <section class="search">
+    <div class="search">
         <button class="search-btn" type="button">Wszystkie</button>
         <button class="search-btn" type="button">Strony</button>
         <button class="search-btn" type="button">Aplikacje</button>
         <button class="search-btn" type="button">Dizajn</button>
         <button class="search-btn" type="button">Marketing</button>
-    </section>
+    </div>
     <section>
         <ul class="portfolio-main-list">
             <li class="portfolio-main-list-piciture">
@@ -95,7 +95,7 @@
     </section>
 </main>
 <footer class="footer">
-    <a class="navigation-logo" href="index.html" alt="logotyp strony">
+    <a class="navigation-logo" href="index.html">
         <img src="/Projekt/images/logo.jpg" alt="WebStudio" width="145" height="31" />
     </a>
     <address>
